# mc-cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml
public/: openapi.yaml
src/: main.rs
src/commands/: console.rs  init.rs  mod.rs  props.rs  run.rs  status.rs  stop.rs
src/commands/mods/: add.rs  list.rs  mod.rs  remove.rs  search.rs  update.rs
src/libs/: fabric.rs  mod.rs  modrinth.rs
src/utils/: config_file.rs  console_log.rs  mc_server_props.rs  mod.rs  rcon.rs  runner.rs
