[package]
name = "mc_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
colored = "3.0.0"
modern-terminal = "0.7.0"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
ratatui = "0.26"
crossterm = "0.27"
